[package]
name = "rust-surrealdb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.0.0-beta.9+20230402", default-features=false, features = ['kv-mem','kv-rocksdb'] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
